# suitesparse

./: CMakeLists.txt  CMakeLists.txt.extra  CTestConfig.cmake  README.md  README.txt  SuiteSparse_config.c  SuiteSparse_config.h  index.html  params.json
amd/: CMakeLists.txt
amd/data/: amd_demo.out
amd/doc/: CMakeLists.txt  Doxyfile
amd/matrix/: adjnoun.rb  cage_G_03.rb  cage_G_06.rb  cage_G_08.rb  cage_G_14.rb  cage_G_19.rb  cage_G_21.rb  cage_G_22.rb  cage_G_23.rb  cage_G_24.rb  cage_G_27.rb  cage_G_28.rb  cage_G_36.rb  cage_G_38.rb  cage_G_40.rb  cage_G_41.rb  ccc_G_02.rb  ccc_G_03.rb  debr_G_01.rb  debr_G_02.rb  debr_G_04.rb  grid1_dual.rb  se_G_04.rb  se_G_05.rb
amd/src/: CMakeLists.txt  amd.h  amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_info.c  amd_info.c.autosave  amd_internal.h  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c
amd/test/: CMakeLists.txt  amd_demo.c.BAK  amd_demo.c.tpl  amd_i_demo.c
amd/validation/: amd_i_demo_adjnoun.rb.out  amd_i_demo_bfly_G_01.rb.out  amd_i_demo_bfly_G_02.rb.out  amd_i_demo_bfly_G_03.rb.out  amd_i_demo_cage_G_01.rb.out  amd_i_demo_cage_G_02.rb.out  amd_i_demo_cage_G_03.rb.out  amd_i_demo_cage_G_04.rb.out  amd_i_demo_cage_G_05.rb.out  amd_i_demo_cage_G_06.rb.out  amd_i_demo_cage_G_07.rb.out  amd_i_demo_cage_G_08.rb.out  amd_i_demo_cage_G_09.rb.out  amd_i_demo_cage_G_10.rb.out  amd_i_demo_cage_G_11.rb.out  amd_i_demo_cage_G_12.rb.out  amd_i_demo_cage_G_13.rb.out  amd_i_demo_cage_G_14.rb.out  amd_i_demo_cage_G_15.rb.out  amd_i_demo_cage_G_16.rb.out  amd_i_demo_cage_G_17.rb.out  amd_i_demo_cage_G_18.rb.out  amd_i_demo_cage_G_19.rb.out  amd_i_demo_cage_G_20.rb.out  amd_i_demo_cage_G_21.rb.out  amd_i_demo_cage_G_22.rb.out  amd_i_demo_cage_G_23.rb.out  amd_i_demo_cage_G_24.rb.out  amd_i_demo_cage_G_25.rb.out  amd_i_demo_cage_G_26.rb.out  amd_i_demo_cage_G_27.rb.out  amd_i_demo_cage_G_28.rb.out  amd_i_demo_cage_G_31.rb.out  amd_i_demo_cage_G_32.rb.out  amd_i_demo_cage_G_33.rb.out  amd_i_demo_cage_G_34.rb.out  amd_i_demo_cage_G_35.rb.out  amd_i_demo_cage_G_36.rb.out  amd_i_demo_cage_G_37.rb.out  amd_i_demo_cage_G_38.rb.out  (+94 more)
btf/: CMakeLists.txt
btf/doc/: CMakeLists.txt  Doxyfile
btf/src/: CMakeLists.txt
camd/: CMakeLists.txt
camd/doc/: CMakeLists.txt  Doxyfile
camd/matrix/: bfly_G_03.rb  cage_G_01.rb  cage_G_02.rb  cage_G_04.rb  cage_G_05.rb  cage_G_10.rb  cage_G_13.rb  cage_G_15.rb  cage_G_18.rb  cage_G_25.rb  cage_G_31.rb  cage_G_34.rb  cage_G_35.rb  cage_G_39.rb  ccc_G_01.rb  debr_G_05.rb  lesmis.rb  se_G_01.rb  se_G_06.rb
camd/src/: CMakeLists.txt  camd.h  camd_1.c  camd_2.c  camd_aat.c  camd_control.c  camd_defaults.c  camd_info.c  camd_internal.h  camd_order.c  camd_postorder.c  camd_preprocess.c  camd_valid.c
camd/test/: CMakeLists.txt  camd_demo.c.BAK  camd_demo.c.tpl  camd_i_demo.c
camd/validation/: camd_demo2.out  camd_i_demo_adjnoun.rb.out  camd_i_demo_bfly_G_01.rb.out  camd_i_demo_bfly_G_02.rb.out  camd_i_demo_bfly_G_03.rb.out  camd_i_demo_cage_G_01.rb.out  camd_i_demo_cage_G_02.rb.out  camd_i_demo_cage_G_03.rb.out  camd_i_demo_cage_G_04.rb.out  camd_i_demo_cage_G_05.rb.out  camd_i_demo_cage_G_06.rb.out  camd_i_demo_cage_G_07.rb.out  camd_i_demo_cage_G_08.rb.out  camd_i_demo_cage_G_09.rb.out  camd_i_demo_cage_G_10.rb.out  camd_i_demo_cage_G_11.rb.out  camd_i_demo_cage_G_12.rb.out  camd_i_demo_cage_G_13.rb.out  camd_i_demo_cage_G_14.rb.out  camd_i_demo_cage_G_15.rb.out  camd_i_demo_cage_G_16.rb.out  camd_i_demo_cage_G_17.rb.out  camd_i_demo_cage_G_18.rb.out  camd_i_demo_cage_G_19.rb.out  camd_i_demo_cage_G_20.rb.out  camd_i_demo_cage_G_21.rb.out  camd_i_demo_cage_G_22.rb.out  camd_i_demo_cage_G_23.rb.out  camd_i_demo_cage_G_24.rb.out  camd_i_demo_cage_G_25.rb.out  camd_i_demo_cage_G_26.rb.out  camd_i_demo_cage_G_27.rb.out  camd_i_demo_cage_G_28.rb.out  camd_i_demo_cage_G_31.rb.out  camd_i_demo_cage_G_32.rb.out  camd_i_demo_cage_G_33.rb.out  camd_i_demo_cage_G_34.rb.out  camd_i_demo_cage_G_35.rb.out  camd_i_demo_cage_G_36.rb.out  camd_i_demo_cage_G_37.rb.out  (+93 more)
ccolamd/: CMakeLists.txt
ccolamd/doc/: CMakeLists.txt  Doxyfile
ccolamd/src/: CMakeLists.txt  ccolamd.c  ccolamd.h  ccolamd_defaults.c
ccolamd/test/: CMakeLists.txt  ccolamd_example.c.tpl  ccolamd_i_example.c
cholmod/: .CMakeLists.txt.kate-swp  CMakeLists.txt
cholmod/doc/: CMakeLists.txt  Doxyfile
cholmod/matrix/: can___24.mtx
cholmod/src/: CMakeLists.txt
cholmod/test/: CMakeLists.txt
cholmod/validation/: cholmod_demo_bcsstk01.tri.out  cholmod_demo_can___24.mtx.out  cholmod_demo_lp_afiro.tri.out  cholmod_l_demo_bcsstk01.tri.out  cholmod_l_demo_can___24.mtx.out  cholmod_l_demo_lp_afiro.tri.out  cholmod_simple_bcsstk01.tri.out  cholmod_simple_can___24.mtx.out  cholmod_simple_lp_afiro.tri.out
colamd/: CMakeLists.txt
colamd/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
colamd/src/: CMakeLists.txt  colamd.c  colamd.h  colamd_defaults.c
colamd/test/: CMakeLists.txt  colamd_example.c.tpl  colamd_i_example.c
csparse/: CMakeLists.txt
csparse/doc/: Doxyfile
csparse/matrix/: 0.tri  2.tri  2diag.tri  2up.tri  bcsstk02.tri  empty.tri  huge.tri  lp_afiro.tri  mangle7.tri  one.tri  up.tri
csparse/src/: CMakeLists.txt
csparse/test/: CMakeLists.txt
csparse/validation/: cs_demo1_lp_afiro.tri.out
cxsparse/: CMakeLists.txt
cxsparse/doc/: Doxyfile
cxsparse/matrix/: 2lo.tri  bcsstk01.tri  c.tri  d.tri  mangle5.tri  mangle6.tri  mangle8.tri  mega.tri  two.tri
cxsparse/src/: CMakeLists.txt  cxsparse.h  cxsparse_add.c  cxsparse_amd.c  cxsparse_chol.c  cxsparse_cholsol.c  cxsparse_compress.c  cxsparse_convert.c  cxsparse_counts.c  cxsparse_cumsum.c  cxsparse_demo.c  cxsparse_demo.h  cxsparse_dfs.c  cxsparse_dmperm.c  cxsparse_droptol.c  cxsparse_dropzeros.c  cxsparse_dupl.c  cxsparse_entry.c  cxsparse_ereach.c  cxsparse_etree.c  cxsparse_fkeep.c  cxsparse_gaxpy.c  cxsparse_happly.c  cxsparse_house.c  cxsparse_ipvec.c  cxsparse_leaf.c  cxsparse_load.c  (+29 more)
klu/: CMakeLists.txt
ldl/: CMakeLists.txt
rbio/: CMakeLists.txt
spqr/: CMakeLists.txt
test/: CMakeLists.txt
umfpack/: CMakeLists.txt
(+1470 files in other folders)
