
include_directories(. "${PROJECT_SOURCE_DIR}/src")

add_subdirectory(amd)
add_subdirectory(colamd)
add_subdirectory(camd)
add_subdirectory(ccolamd)
add_subdirectory(csparse)
add_subdirectory(cxsparse)
add_subdirectory(cholmod)
add_subdirectory(klu)
add_subdirectory(ldl)
add_subdirectory(rbio)
add_subdirectory(spqr)
add_subdirectory(umfpack)
